--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -611,6 +611,11 @@ strong {
   padding: 0 20px;
 }
 
+nav li {
+  margin: 0;
+  padding: 0 10px;
+  display: inline; 
+
 section img {
   max-width: 100%;
 }
