--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,125 +1,41 @@
-
-/* =============================================================================
-   Tables
-   ========================================================================== */
-/*
- * Remove most spacing between table cells
- */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
 body {
-  padding: 0px 0 20px 0px;
-  margin: 0px;
-  font: 14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #f0e7d5;
-  font-weight: normal;
-  background: #252525;
-}
-
-
-
-h1, h2, h3 {
-  line-height: 1.1;
+	height: 100%;
+	margin: 0;
+	text-align: center;
+	width: 100%;
 }
 
 h1 {
-  font-size: 28px;
+	font-size: 32px; font-family: Palatino, 'Palatino Linotype', serif;color: rgb(46,105,163);
 }
 
 h2 {
-  font-size: 24px;
+	font-size: 56px;
+  color: #ffffff;
 }
 
-h4, h5, h6 {
-  color: #e8e8e8;
-}
-
-h3 {
-  font-size: 18px;
-  line-height: 24px;
-  font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-  font-weight: normal;
-  color: #FFFF00;
-}
-
-a {
-  color: #ffcc00;
-  font-weight: 400;
-  text-decoration: none;
-}
-a:hover {
-  color: #ffeb9b;
-}
-
-
-
-strong {
-  font-family: 'OpenSansBold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-  font-weight: normal;
-}
-
-wrapper {
-  max-width: 650px;
-  margin: 0 auto;
-  position: relative;
-  padding: 0 20px;
-}
-
-
-
-section {
-  max-width: 650px;
-  padding: 30px 0px 50px 0px;
-  margin: 20px 0;
-  margin-top: 70px;
-}
-section #title {
-  border: 0;
-  outline: none;
-  margin: 0 0 50px 0;
-  padding: 0 0 5px 0;
-}
-section #title h1 {
-  color: #FFFF00;
-  font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  font-size: 40px;
-  text-align: center;
-  line-height: 36px;
-}
-section #title p {
-  color: 	#800000;
-  font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  font-size: 18px;
-  text-align: center;
-}
-section #title .credits {
-  font-size: 11px;
-  font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  color: #696969;
-  margin-top: -10px;
-}
-section #title .credits.left {
-  float: left;
-}
-section #title .credits.right {
-  float: right;
-}
-
-nav li {
-  margin: 0;
-  padding: 0 10px;
-  display: inline; 
 
 .happy {
 	padding: 250px 0;
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;color: #ffffff;
-background-image: url("images/Tulips.jpg");
+background-image: url("https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/bg.jpghttps://pixabay.com/static/uploads/photo/2015/07/17/06/08/styggkaerret-848532_960_720.jpg");
   background-size: cover
+
+}
+
+
+
+p {
+font-size: 2rem;
+color: #ffffff;
+}
+
+.happy a {
+	color: #00FFAA;
+	font-size: 1.25em;
+	text-decoration: none;
+}
+
+#footer {font-size: 0.75rem;
 }
