--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,16 +6,16 @@ body {
 }
 
 h1 {
-	font-size: 32px; font-family: Palatino, 'Palatino Linotype', serif;color: rgb(46,105,163);
+	font-size: 20px; font-family: Palatino, 'Palatino Linotype', serif;color: #FFFF00;
 }
 
 h2 {
 	font-size: 56px;
-  color: #ffffff;
+  color: #800000;
 }
 
 
-.happy {
+happy {
 	padding: 250px 0;
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;color: #ffffff;
@@ -31,7 +31,7 @@ font-size: 2rem;
 color: #ffffff;
 }
 
-.happy a {
+happy a {
 	color: #00FFAA;
 	font-size: 1.25em;
 	text-decoration: none;
