--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,20 +6,20 @@ body {
 }
 
 h1 {
-	font-size: 20px; font-family: Palatino, 'Palatino Linotype', serif;color: #FFFF00;
+	font-size: 32px; font-family: Palatino, 'Palatino Linotype', serif;color: rgb(46,105,163);
 }
 
 h2 {
 	font-size: 56px;
-  color: #800000;
+  color: #ffffff;
 }
 
 
-happy {
+.hero {
 	padding: 250px 0;
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;color: #ffffff;
-background-image: url("https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/bg.jpghttps://pixabay.com/static/uploads/photo/2015/07/17/06/08/styggkaerret-848532_960_720.jpg");
+background-image: url("https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/bg.jpg");
   background-size: cover
 
 }
@@ -31,7 +31,7 @@ font-size: 2rem;
 color: #ffffff;
 }
 
-happy a {
+.hero a {
 	color: #00FFAA;
 	font-size: 1.25em;
 	text-decoration: none;
