--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -19,7 +19,7 @@ happy {
 	padding: 250px 0;
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;color: #ffffff;
-background-image: url("KH-PHOTO/blob/master/Images/IMG_6703.JPG");
+background-image: url("Tulips.jpg");
   background-size: cover
 }
 
