--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -15,18 +15,17 @@ h2 {
 }
 
 
+p {
+font-size: 2rem;
+color: #ffff00;
+}
+
 happy {
 	padding: 250px 0;
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;color: #ffff00;
-background-image: url("https://github.com/karolinahamilton/HereGoesNothing/blob/master/images/Tulips.jpg");
+background-image: url("images/Tulips.jpg");
   background-size: cover
-}
-
-
-p {
-font-size: 2rem;
-color: #ffff00;
 }
 
 Happy a {
