--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -19,7 +19,7 @@ h2 {
 	padding: 250px 0;
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;color: #ffffff;
-background-image:url("images/image.jpeg")
+background-image:url("http://www.gettyimages.pt/gi-resources/images/Homepage/Hero/PT/PT_hero_42_153645159.jpg")
   background-size: cover
 
 }
