--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,20 +6,20 @@ body {
 }
 
 h1 {
-	font-size: 32px; font-family: Palatino, 'Palatino Linotype', serif;color: green);
+	font-size: 32px; font-family: Palatino, 'Palatino Linotype', serif;color: #FFDAB9);
 }
 
 h2 {
 	font-size: 56px;
-  color: blue;
+  color: #BC8F8F;
 }
 
 
 .hero {
 	padding: 250px 0;
 	margin: 30px;
-  font-family: 'Trebuchet MS', Helvetica, sans-serif;color: Blue;
-background-image: url("http://www.gettyimages.pt/gi-resources/images/Homepage/Hero/PT/PT_hero_42_153645159.jpg")
+  font-family: 'Trebuchet MS', Helvetica, sans-serif;color: #FFDAB9;
+background-image: url("http://www.w3schools.com/bootstrap/cinqueterre.jpg")
   background-size: cover
 
 }
@@ -29,11 +29,11 @@ background-image: url("http://www.gettyimages.pt/gi-resources/images/Homepage/He
 
 p {
 font-size: 2rem;
-color: Blue;
+color: #708090;
 }
 
 .hero a {
-	color: black;
+	color: #FFFAFA;
 	font-size: 1.25em;
 	text-decoration: none;
 }
