--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,7 +4,7 @@ body {
 	text-align: center;
 	width: 100%;
 	
-    background-image: url("image/images/IMG_7040[1].JPG");
+    background-image: url("images/IMG_7040[1].JPG");
     background-color: #cccccc;
 
 
