--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,7 +4,7 @@ body {
 	text-align: center;
 	width: 100%;
 	
-    background-image: url("images/IMG_7040[1].JPG");
+    background-image: url("https://github.com/karolinahamilton/HereGoesNothing/blob/gh-pages/images/IMG_7044%5B1%5D.JPG?raw=true");
     background-color: #cccccc;
 
 
