--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,6 +6,7 @@ body {
 	
     background-image: url("https://github.com/karolinahamilton/HereGoesNothing/blob/gh-pages/images/IMG_7044%5B1%5D.JPG?raw=true");
     background-color: #cccccc;
+    background-size: cover
 
 
 }
