--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -25,7 +25,7 @@ hero {
 	padding: 250px 0;
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;color: white;
-    background-image: url("https://github.com/karolinahamilton/HereGoesNothing/blob/gh-pages/images/IMG_7040%5B1%5D.JPG?raw=true");
+    background-image: url(images/IMG_7040[1].JPG);
     background-color: #cccccc;
     background-size: cover
 
